# based.email-credential-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/based_email_cm/: __main__.py  cli.py  common.py  config.py  http_dmz.py  jwt_ctx.py  models.py  utils.py
src/based_email_cm/dmz/: __init__.py  http_handler.py  nats_handler.py
src/based_email_cm/http/: app.py  injectables.py  login_controller.py
